# simmgr

./: .gitignore  LICENSE  README.rst
.github/workflows/: ci.yml
docs/structurizr/: workspace.dsl
net-configurator/: README.rst  pyproject.toml
net-configurator/src/net_configurator/: __init__.py  base_exceptions.py  constants.py  developer.py  discrepancy_finder.py  executor.py  json_file_reader.py  json_file_readerwriter.py  json_file_writer.py  logg_sensitive_info_filter.py  namer.py  optimizer.py  pseudo_test.py  rule.py  rule_discrepancy_finder.py  rule_manager.py  rule_manager_protocol.py  rules_source.py  rules_target.py  watch_guard_rule_manager.py  watchguard_command_builder.py  watchguard_command_generator.py  watchguard_parser.py  watchguard_reader.py  watchguard_readerwriter.py
net-configurator/tests/: test_discrepancy_finder.py  test_executor.py  test_jsonfilereader.py  test_namer.py  test_rule.py  test_rule_discrepancy_finder.py  test_rule_filter.py  test_rule_networkpeer.py  test_rule_networkservice.py  test_rule_owner.py  test_rule_packetfilter.py  test_rule_peer.py  test_rules_source.py  test_rulessource.py  test_rulestarget.py  test_watchguard_command_builder.py  test_watchguard_command_generator.py  test_watchguard_parser.py
net-configurator/tests/snapshots/test_watchguard_parser/test_extract_rule_names/extract_rule_name_data-valid_rule_names.txt/: valid_rule_names.json
net-configurator/tests/snapshots/test_watchguard_parser/test_parse_filter/filter_data-icmp_filter.txt/: icmp_filter.json
net-configurator/tests/snapshots/test_watchguard_parser/test_parse_filter/filter_data-tcp_double_filter.txt/: tcp_double_filter.json
net-configurator/tests/snapshots/test_watchguard_parser/test_parse_filter/filter_data-tcp_range_filter.txt/: tcp_range_filter.json
net-configurator/tests/snapshots/test_watchguard_parser/test_parse_rule/parse_rule_data-empty_rule.txt/: empty_rule.json
net-configurator/tests/snapshots/test_watchguard_parser/test_parse_rule/parse_rule_data-valid_rule.txt/: valid_rule.json
net-configurator/tests/snapshots/test_watchguard_parser/test_parse_rule/parse_rule_data-valid_rule_2.txt/: valid_rule_2.json
net-configurator/tests/test_data/extract_rule_name_data/: valid_rule_names.txt
net-configurator/tests/test_data/filter_data/: icmp_filter.txt  tcp_double_filter.txt  tcp_range_filter.txt
net-configurator/tests/test_data/parse_rule_data/: valid_rule.txt  valid_rule_2.txt
